# sdr_receiver_dvb_t2

sdr_receiver_dvb_t2/: .gitignore  CMakeLists.txt  main_window.cpp  main_window.h  sdr_receiver_dvb_t2.pro
